fix: add post assets/jobs
