# internal/server/model_api_error.go
@@ -1,10 +1,0 @@
-package server
-
-type ApiError struct {
-
-	// A HTTP status code applicable to this problem
-	Code float32 `json:"code"`
-
-	// A description of the error that occurred
-	Message string `json:"message"`
-}
